# lsst-adler

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  adler-day-testing.db  pyproject.toml  test_write_AdlerData_database.db
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: six-month-review.md
.github/workflows/: build-documentation.yml  linting.yml  pre-commit-ci.yml  smoke-test.yml  testing-and-coverage.yml
benchmarks/: asv.conf.json
docs/: conf.py  index.rst  notebooks.rst  requirements.txt
docs/notebooks/: adler_phasecurve_example.ipynb  colour_functions_example.ipynb  intro_notebook.ipynb  outlier_detection_example.ipynb  plotting_utilities_example.ipynb
notebooks/: adler_demo.ipynb  adler_examples.ipynb  adler_examples_local_db.ipynb  adlerdata_in_and_out.ipynb  colour_functions_demo.ipynb  colour_functions_testing.ipynb  diaSource_cutout_example.ipynb  gen_adlerVals.ipynb  mc_phase_fit.ipynb  mc_phase_fit_testing.ipynb  noisechisel_example.ipynb  outlier_detection.ipynb  plotting_utilities.ipynb  simulated_asteroid_ephem_adler.ipynb  simulated_asteroid_ephem_rsp.ipynb  wedgephotometry_example.ipynb
notebooks/.ipynb_checkpoints/: alerts_per_night-checkpoint.ipynb
notebooks/SSO_alerts_per_visit/: alerts_per_night.ipynb  baseline_v3.0_10yrs.db
notebooks/adler_demo/: adler_demo.ipynb  adler_demo_dp1.ipynb  adler_demo_mpc_obs_sbn.ipynb
notebooks/adler_demo_cli/: adler_6098332225018000.sh  adler_phase_colour_6098332225018000.sh
notebooks/adler_demo_mpc/: adler_demo_mpc.ipynb  mpc_obs_sbn_adler_testing_local.ipynb
notebooks/adler_demo_outliers/: adler_demo_outliers.ipynb
notebooks/adler_demo_rsp/: adler_demo_rsp.ipynb
notebooks/gen_test_data/: adler_demo_testing_database.db  adler_demo_testing_database_dp1.db  example_AdlerData_database.db  get_mpc_osb_sbn_test_data.ipynb  get_test_data.ipynb  get_test_data_dp1.ipynb
notebooks/lightcurve_app_model/: simulated_asteroid_ephem_rsp.ipynb  simulated_asteroid_ephem_rsp_adler.ipynb
notebooks/phasecurve_criteria/: df_sample_100_JT.csv  df_sample_100_KBO.csv  df_sample_100_MB.csv  df_sample_100_NEA.csv  df_ssoid_dp03_pop_sample.csv  dp03_phasecurve_metrics.ipynb  dp03_pop_sample.ipynb  dp03_pop_sample_phasecurves.ipynb  (+1 more)
(+350 files in other folders)
